fix z-index bug with logo in firefox

--- a/assets/less/source/header.less
+++ b/assets/less/source/header.less
@@ -121,7 +121,7 @@
     .ase-site-logo {
         top:0;
         text-align: center;
-        z-index:9999;
+        //z-index:9;
         margin:0 auto;
         max-width:200px;
         border-right:3px solid white;
